# OpenTimsTDF

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml  fuzz.yml  publish.yml  validate-mzml.yml
crates/opentimstdf/: Cargo.toml
crates/opentimstdf-py/: Cargo.toml
crates/opentimstdf-py/src/: lib.rs
crates/opentimstdf-py/tests/: test_basic.py
crates/opentimstdf/examples/: to_mzml.rs
crates/opentimstdf/fuzz/: Cargo.toml
crates/opentimstdf/fuzz/fuzz_targets/: checked_block_len.rs  decode_codec2.rs
crates/opentimstdf/src/: codec.rs  error.rs  lib.rs  mzml.rs  reader.rs  types.rs
crates/opentimstdf/tests/: conformance.rs  roundtrip.rs
docs/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json  wrangler.jsonc
docs/docs/: changelog.md  install.md  intro.md  license.md  quickstart.md
docs/docs/format/: 00-overview.md  01-tdf-sqlite-schema.md  03-frame-payload-encoding.md  04-calibration.md  06-references-and-gaps.md
docs/docs/guide/: acquisition-modes.md  calibration.md  peaks-and-codecs.md  reader.md
docs/docs/reference/: api.md  examples.md  python-api.md
docs/format/: 01-tdf-sqlite-schema.md  02-tdf-bin-block-stream.md  03-frame-payload-encoding.md  05-instrument-tables.md  06-references-and-gaps.md
docs/src/css/: custom.css
examples/: dump.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_basic.py
schema/: README.md
scripts/: check-release-ready.sh  sources.json
src/: calibration.rs  codec.rs  lib.rs  reader.rs
tests/: roundtrip.rs
