[workspace]
resolver = "2"
members = ["crates/opentimstdf", "crates/opentimstdf-py"]

[workspace.package]
version = "1.0.4"
edition = "2021"
rust-version = "1.75"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenTimsTDF"
homepage = "https://github.com/Sigilweaver/OpenTimsTDF"
keywords = ["mass-spectrometry", "bruker", "timstof", "tdf", "proteomics"]
categories = ["parser-implementations", "science"]

[workspace.dependencies]
opentimstdf = { path = "crates/opentimstdf" }
mass-spec-core = { path = "../mass-spec-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

[workspace.lints.rust]
unsafe_code = "forbid"
