[workspace]
resolver = "2"
members = ["crates/opentimstdf", "crates/opentimstdf-py"]

[workspace.package]
version = "1.3.0"
edition = "2021"
rust-version = "1.85"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenTimsTDF"
homepage = "https://sigilweaver.app/opentimstdf/"
documentation = "https://sigilweaver.app/opentimstdf/docs/"
keywords = ["mass-spectrometry", "bruker", "timstof", "tdf", "proteomics"]
categories = ["parser-implementations", "science"]

[workspace.dependencies]
opentimstdf = { path = "crates/opentimstdf" }
openmassspec-core = "1.2.0"
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }

[workspace.lints.rust]
unsafe_code = "forbid"
