[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "opentimstdf"
description = "Rust reader for timsTOF .d/ (TDF) mass spectrometry bundles"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nathan Riley", email = "git@nathanriley.com" }]
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/Sigilweaver/OpenTimsTDF"
Documentation = "https://sigilweaver.app/opentimstdf/docs"
Source = "https://github.com/Sigilweaver/OpenTimsTDF"
Changelog = "https://github.com/Sigilweaver/OpenTimsTDF/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "opentimstdf"
manifest-path = "crates/opentimstdf-py/Cargo.toml"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "README.md", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "README.md", format = "wheel" },
]
