[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "opentdf"
version = "1.0.0"
description = "Rust reader for timsTOF .d/ (TDF) mass spectrometry bundles"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nathan Riley", email = "git@nathanriley.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/Sigilweaver/OpenTDF"
Documentation = "https://sigilweaver.app/opentdf/docs"
Source = "https://github.com/Sigilweaver/OpenTDF"
Changelog = "https://github.com/Sigilweaver/OpenTDF/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "opentdf"
manifest-path = "Cargo.toml"
