[package]
name = "opentimstdf-py"
description = "Python bindings for the OpenTimsTDF library."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "opentimstdf"
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
useless_conversion = "allow"

[dependencies]
opentimstdf.workspace = true
pyo3 = { workspace = true }
numpy = "0.29"
