[package]
name = "opentimstdf"
description = "Rust reader for timsTOF .d/ (TDF) mass spectrometry bundles."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
zstd = "0.13"
